--- a/.config/musikcube/settings.json
+++ b/.config/musikcube/settings.json
@@ -5,9 +5,9 @@
   "AutoHideCommandBar": false,
   "AutoUpdateCheck": true,
   "CategoryTrackListSortOrder": 0,
-  "ColorTheme": "wal",
+  "ColorTheme": "",
   "DisableAlbumArtistFallback": false,
-  "DisableCustomColors": false,
+  "DisableCustomColors": true,
   "DisableRatingColumn": false,
   "DisableWindowTitleUpdates": true,
   "FirstRunSettingsDisplayed": true,
